--- a/javascript_projeto_de_vida/index.html
+++ b/javascript_projeto_de_vida/index.html
@@ -6,8 +6,18 @@
     <title>Meus objetivos do ano</title>
 </head>
 <body>
-    <section class="conteudo-principal"></section>
+    <section class="conteudo-principal">
+        <h2 class="titulo-pricipal">objetivos do ano</h2>
+        <div class="botoes">
+            <button class="botoes">curso na alura</button>
+            <button class="botoes">criar projetos em javascript</button>
+            <button class="botoes">criar um portifolio</button>
+            <button class="botoes">atualizar meu curriculo</button>
+
+        </div>
+    </section>
     
+
 
 
 
