--- a/javascript_projeto_de_vida/index.html
+++ b/javascript_projeto_de_vida/index.html
@@ -12,19 +12,16 @@
     <section class="conteudo-principal">
         <h2 class="titulo-pricipal">objetivos do ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botoes">curso na alura</button>
+            <button class="botoes ativo">curso na alura</button>
             <button class="botoes">criar projetos em javascript</button>
             <button class="botoes">criar um portifolio</button>
             <button class="botoes">atualizar meu curriculo</button>
 
         </div>
     </section>
+    <script src="main.js"></script>
+
     
-
-
-
-
-
 </body>
 
 </html>
