--- a/javascript_projeto_de_vida/index.html
+++ b/javascript_projeto_de_vida/index.html
@@ -10,18 +10,35 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-pricipal">objetivos do ano<span>_</span>_</h2>
+        <h2 class="titulo-pricipal">objetivos do ano<span></span>_</h2>
         <div class="botoes">
             <button class="botoes ativo">curso na alura</button>
             <button class="botoes">criar projetos em javascript</button>
             <button class="botoes">criar um portifolio</button>
             <button class="botoes">atualizar meu curriculo</button>
-
+        </div>
+        <div class="abas-texto">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-pricipal">Estudar 4 curos na Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-pricipal">Criar 5 projetos em javascript</h3>
+                <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-pricipal">Criar um portfólio com os meus 3 melhores projeto</h3>
+                <h4 class="aba-conteudo-titulo-secundario">tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Atualizar meu currículo com os certificados da Alura</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+            </div>
         </div>
     </section>
     <script src="main.js"></script>
 
-    
+
 </body>
 
 </html>
