--- a/javascript_projeto_de_vida/index.html
+++ b/javascript_projeto_de_vida/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-pricipal">objetivos do ano<span></span>_</h2>
+        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="botoes">
             <button class="botoes ativo">curso na alura</button>
             <button class="botoes">criar projetos em javascript</button>
@@ -37,8 +37,5 @@
         </div>
     </section>
     <script src="main.js"></script>
-
-
 </body>
-
 </html>
